--- a/INSTALL
+++ b/INSTALL
@@ -34,5 +34,5 @@ Template for an apache configuration:
 	</Directory>
 
 
-7. If you want to use the cvmfs-browser application uncomment and configure the options included in setting.py.example.
+7. If you want to use the cvmfs-browser application uncomment and configure the options included in settings.py.example.
         NOTE: It will be necessary to install the cvmfs-browser application. It can be found in https://github.com/cvmfs/cvmfs-browser
